--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@angular/platform-browser": "~13.3.0",
 		"@angular/platform-browser-dynamic": "~13.3.0",
 		"@angular/router": "~13.3.0",
+		"bootstrap": "^5.3.3",
 		"eslint": "~9.12.0",
 		"prettier": "~3.3.3",
 		"rxjs": "~7.5.0",
